# snekray

./: README.md  example.py  requirements.txt  setup.cfg
.github/workflows/: python-distribute.yml  python-package.yml
praytracer/: __init__.py  pray.py
scenes/: clock.ppm  clock_face.py  output.ppm  sphere.ppm  sphere.py  sphere_with_light.ppm  sphere_with_light.py
src/praytracer/: __init__.py  point.py  pray.py  ptuple.py  vector.py
src/praytracer/types/: point.py  ptuple.py  vector.py
src/snekray/: __init__.py  canvas.py  snekray.py
src/snekray/environment/: __init__.py  objects.py  world.py
src/snekray/objects/: base_object.py  intersection.py  material.py  point_light.py  sphere.py
src/snekray/types/: color.py  matrix.py  point.py  ptuple.py  ray.py  vector.py
tests/unit/: test_sample.py
tests/unit/basic_structs/: points.py  test_colors.py  test_matrix.py  test_points.py  test_ray.py  test_transform.py  test_vectors.py
tests/unit/objects/: test_intersections.py  test_lights.py  test_material.py  test_sphere.py
tests/unit/projectile/: test_projectile_path.py
tests/unit/screen/: test_canvas.py  test_screen_dimensions.py
