[metadata]
name = snekray
version = 0.0.1
author = Matt Higgins
author_email = matt@matthiggins.dev
description = A python implementation of The Ray Tracer Challenge
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vextor22/snekray
project_urls =
    Bug Tracker = https://github.com/vextor22/snekray/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src